fix of overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-}
-
-.app {
   overflow: hidden;
 }
 
@@ -109,7 +106,7 @@ body {
   100% {
     -webkit-filter: hue-rotate(360deg);
             filter: hue-rotate(360deg);
-    bottom: 47%;
+    bottom: 86%;
     opacity: 0;
   }
 }
@@ -126,7 +123,7 @@ body {
   100% {
     -webkit-filter: hue-rotate(360deg);
             filter: hue-rotate(360deg);
-    bottom: 47%;
+    bottom: 86%;
     opacity: 0;
   }
 }
